<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <!--<item-->
            <!--android:id="@+id/nav_krishisena"-->
            <!--android:icon="@drawable/krishisena"-->
            <!--android:title="@string/krishisena" />-->
        <item
            android:id="@+id/nav_machineries"
            android:icon="@drawable/machine"

            android:title="@string/machineries" />
        <item
            android:id="@+id/nav_bookingstatus"
            android:icon="@drawable/bookingstatus"
            android:title="@string/booking_status" />
        <item
            android:id="@+id/bill"
            android:icon="@drawable/bill"
            android:title="Bill" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profileuser"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_changepassword"
            android:icon="@drawable/changepassword"
            android:visible="false"
            android:title="@string/changepasword" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>

    <group android:id="@+id/nav_footer">

        <item
            android:id="@+id/nav_about"
            android:title="About Annam" />
    </group>


</menu>
