<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Do you want to change your password??"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/textView2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/book_a_service_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:padding="20dp"
                    android:hint="@string/oldpassword"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_change_old_pasfeild"
                    android:singleLine="true"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/book_a_service_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:padding="20dp"
                    android:hint="@string/newpassword"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_change_newfeild"
                    android:singleLine="true"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:layout_height="wrap_content">


                <Button
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/oval_button_green"
                    android:text="@string/ok"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:id="@+id/btn_change_ok" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>