<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">

           <!-- <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/scrollView4">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:padding="10dp"
                android:gravity="top"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:id="@+id/imageView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:padding="5dp"
                        android:background="@drawable/book_a_service_bg"

                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:padding="10dp"
                            android:gravity="left"
                            android:hint="@string/Email_phone"
                            android:id="@+id/edt_email_phone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/book_a_service_bg"
                        android:layout_marginTop="5dp"

                        android:gravity="left"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:gravity="left"
                            android:singleLine="true"
                            android:hint="@string/Password"
                            android:id="@+id/edt_passsword" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:id="@+id/btn_login" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:id="@+id/btn_signup" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:id="@+id/forgot_txt_forgot"/>
                </LinearLayout>

                </LinearLayout>

           <!-- </ScrollView>-->
        </LinearLayout>

    </FrameLayout>
</LinearLayout>