<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:id="@+id/imageView" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/iconinclude_layout">

              <!--  <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/sym_def_app_icon"
                        android:id="@+id/imageView2" />

                </LinearLayout>-->
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:id="@+id/buttonslayout">
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/imageiconlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="@string/book_now"
                        android:padding="15dp"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:background="@color/colorPrimary"
                        android:id="@+id/btn_home_booknow" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/book_later"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:id="@+id/btn_home_booklater" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:padding="15dp"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="@string/machineries"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:background="@color/colorPrimary"
                        android:id="@+id/btn_home_machineries" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>